# DDBSS

./: CMakeLists.txt  README.md
bulid/: CMakeCache.txt  DDBS_server  Makefile  cmake_install.cmake  rebuild  server.config
src/: assembly_restore.c  backup.h  config.c  dedup_phase.c  destor.c  destor.h  do_backup.c  do_restore.c  filter_phase.c  har_rewrite.c  jcr.c  jcr.h  net_phase.c  optimal_restore.c  restore.h  restore_aware.c  rewrite_phase.c  rewrite_phase.h
src/index/: fingerprint_cache.c  fingerprint_cache.h  index.c  index.h  index_buffer.h  kvstore.h  kvstore_htable.c  sampling_method.c  similarity_detection.c
src/net/: network.c  network.h
src/recipe/: recipestore.h
src/storage/: containerstore.c  containerstore.h
src/utils/: queue.c
